--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -6,7 +6,7 @@ Description: EKSWSV1
 
 Parameters:
 
-  EksClusterName:
+  EksClusterName: jwt
     Type: String
     Description: The name of the EKS cluster created
     Default: 
@@ -14,7 +14,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter the EKS cluster name
 
-  GitSourceRepo:
+  GitSourceRepo: EKS
     Type: String
     Description: GitHub source repository - must contain a Dockerfile and buildspec.yml in the base
     Default: 
@@ -22,7 +22,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub repository name
 
-  GitBranch:
+  GitBranch: master
     Type: String
     Default: master
     Description: GitHub git repository branch - change triggers a new build
@@ -30,7 +30,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub repository branch name
 
-  GitHubToken:
+  GitHubToken: f2e8274fc10623028c89e7e488cac7d18ee718cf
     Type: String
     NoEcho: true
     Description: GitHub API token - see https://github.com/blog/1509-personal-api-tokens
@@ -38,7 +38,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub personal access token
 
-  GitHubUser:
+  GitHubUser: alvadeveloper
     Type: String
     Default:
     Description: GitHub username or organization
@@ -46,7 +46,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub username or organization
 
-  CodeBuildDockerImage:
+  CodeBuildDockerImage: jwt-api-test
     Type: String
     Default: aws/codebuild/standard:4.0
     Description: AWS CodeBuild Docker optimized image
@@ -54,7 +54,7 @@ Parameters:
     MaxLength: 100
     ConstraintDescription: You must enter a CodeBuild Docker image
 
-  KubectlRoleName:
+  KubectlRoleName: UdacityFlaskDeployCBKubectlRole
     Type: String
     Default: 
     Description: IAM role used by kubectl to interact with EKS cluster
@@ -87,19 +87,19 @@ Metadata:
           - EksClusterName
     ParameterLabels:
       GitHubUser:
-        default: alvadeveloper
+        default: Username
       GitHubToken:
-        default: f2e8274fc10623028c89e7e488cac7d18ee718cf
+        default: Access token
       GitSourceRepo:
-        default: EKS
+        default: Repository
       GitBranch:
-        default: master
+        default: Branch
       CodeBuildDockerImage:
-        default: jwt-api-test
+        default: Docker image
       KubectlRoleName:
-        default: UdacityFlaskDeployCBKubectlRole
+        default: kubectl IAM role
       EksClusterName:
-        default: jwt
+        default: EKS cluster name
 
 
 Resources:
