--- a/simple_jwt_api.yml
+++ b/simple_jwt_api.yml
@@ -8,7 +8,7 @@ spec:
     - port: 80
       targetPort: 8080
   selector:
-    app: jwt
+    app: simple_jwt_api
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -23,11 +23,11 @@ spec:
       maxSurge: 2
   selector:
     matchLabels:
-      app: jwt
+      app: simple_jwt_api
   template:
     metadata:
       labels:
-        app: jwt
+        app: simple_jwt_api
     spec:
       containers:
         - name: jwt
