--- a/simple_jwt_api.yml
+++ b/simple_jwt_api.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jwt
+  name: simple_jwt_api
 spec:
   type: LoadBalancer
   ports:
@@ -13,7 +13,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jwt
+  name: simple_jwt_api
 spec:
   replicas: 3
   strategy:
@@ -30,7 +30,7 @@ spec:
         app: simple_jwt_api
     spec:
       containers:
-        - name: jwt
+        - name: simple_jwt_api
           image: CONTAINER_IMAGE
           securityContext:
             privileged: false
