--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,3 +42,8 @@ artifacts:
 env:
      parameter-store:         
        JWT_SECRET: myjwtsecret
+
+pre_build:
+commands:
+    - pip3 install -r requirements.txt 
+    - python -m pytest test_main.py
