--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,7 +41,7 @@ artifacts:
 
 env:
      parameter-store:         
-       JWT_SECRET: myjwtsecret
+       JWT_SECRET: JWT_SECRET
 
 pre_build:
 commands:
