--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,6 +31,7 @@ phases:
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         - pip3 install -r requirements.txt 
+        - python -m pytest test_main.py
        
   build:
     commands:
